--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,7 +10,7 @@ h1, h2, h3 {
   font-weight: bold;
 }
 
-h1, #ny h3, a, #footer p {
+h1, #ny h3, #footer p, a {
   color: white;
 }
 
@@ -30,9 +30,24 @@ h3 {
   font-size: 23px;
 }
 
-#footer {
+#footer a, #header a {
+  font-size: 18px;
+}
+
+#footer p {
   font-size: 11px;
+  display: inline;
+
+}
+
+#footer {
+  text-align: left;
   background-color: dimgray;
   display: inline-block;
-  text-align: left; !important
+  float: left;
+  width: 100%;
+}
+
+#footer nav {
+ display: inline-block;
 }
